samples/_failures_safe/1761257572_db02d8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d3a17973.c: In function ‘display_compression_stats’:
./samples/SAFE/__tmp_d3a17973.c:142:12: error: missing terminating " character
  142 |     printf("  Algorithm:
      |            ^~~~~~~~~~~~~
./samples/SAFE/__tmp_d3a17973.c:142:5: error: expected expression at end of input
  142 |     printf("  Algorithm:
      |     ^~~~~~
./samples/SAFE/__tmp_d3a17973.c:142:5: error: expected declaration or statement at end of input
